--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,10 @@
 # Byte-compiled / optimized / DLL files
-__pycache__/
+__pycache__/*
+**/__pycache__
+*.cpython-312
 *.py[cod]
 *$py.class
+*.pyc
 
 # C extensions
 *.so
