--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,19 @@
 # Byte-compiled / optimized / DLL files
-__pycache__/*
-**/__pycache__
+__pycache__/
 *.cpython-312
 *.py[cod]
 *$py.class
 *.pyc
+
+# OTHER FILES
+.DS_Store
+.vscode
+.data.json
+database/examples
+.idea
+/logs
+.logs
+logs
 
 # C extensions
 *.so
